--- a/src/Vistas/ConsultDeAlumnosPorMateria.form
+++ b/src/Vistas/ConsultDeAlumnosPorMateria.form
@@ -123,6 +123,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Salir"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="salirActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
