--- a/src/Vistas/menuPrincipal.form
+++ b/src/Vistas/menuPrincipal.form
@@ -88,7 +88,7 @@
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItemAlumnosMateria">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Alumnos de Materia"/>
+                <Property name="text" type="java.lang.String" value="Alumnos por Materia"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItemAlumnosMateriaActionPerformed"/>
