--- a/src/Vistas/GestionMaterias.form
+++ b/src/Vistas/GestionMaterias.form
@@ -138,11 +138,18 @@
     <Component class="javax.swing.JTextField" name="jTCodigo">
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTCodigoActionPerformed"/>
+        <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTCodigoKeyReleased"/>
       </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="jTnombre">
+      <Events>
+        <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTnombreKeyReleased"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="jTanio">
+      <Events>
+        <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTanioKeyReleased"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JRadioButton" name="jREstado">
     </Component>
