Modificación filtros vistas

--- a/src/Vistas/ViewGestionDeAlumnos.form
+++ b/src/Vistas/ViewGestionDeAlumnos.form
@@ -133,17 +133,27 @@
   </Layout>
   <SubComponents>
     <Component class="javax.swing.JTextField" name="jTDoc">
+      <Properties>
+        <Property name="toolTipText" type="java.lang.String" value="Ingrese el documento del alumno"/>
+      </Properties>
       <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTDocActionPerformed"/>
         <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTDocKeyReleased"/>
       </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="jTapellido">
+      <Properties>
+        <Property name="toolTipText" type="java.lang.String" value="Ingrese el apellido del alumno"/>
+      </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTapellidoActionPerformed"/>
         <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTapellidoKeyReleased"/>
       </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="jTnombre">
+      <Properties>
+        <Property name="toolTipText" type="java.lang.String" value="Ingrese el nombre del alumno"/>
+      </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTnombreActionPerformed"/>
         <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTnombreKeyReleased"/>
