--- a/src/Vistas/ViewActualizacionDeNotas.form
+++ b/src/Vistas/ViewActualizacionDeNotas.form
@@ -228,6 +228,9 @@
         <Property name="text" type="java.lang.String" value=" "/>
         <Property name="toolTipText" type="java.lang.String" value="ingrese nota del 0 al 10"/>
       </Properties>
+      <Events>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTextFieldNotaKeyTyped"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
